[gd_scene load_steps=20 format=4 uid="uid://cf6ryk82n8bbu"]

[ext_resource type="PackedScene" uid="uid://bc1mr3tkohrqp" path="res://campfire/campfire.tscn" id="1_ifaiv"]
[ext_resource type="TileSet" uid="uid://5g2503ln5wr" path="res://data/tileset.tres" id="1_m1504"]
[ext_resource type="Script" uid="uid://ck31yif2oypl8" path="res://levels/main.gd" id="1_qy63d"]
[ext_resource type="PackedScene" uid="uid://1jhdt1f1f6nt" path="res://player/player.tscn" id="2_ifaiv"]
[ext_resource type="PackedScene" uid="uid://d0h0vbjvard7o" path="res://wolf/wolf.tscn" id="3_5k4jt"]
[ext_resource type="PackedScene" uid="uid://bthfj7fgcgi0" path="res://sheep/sheep.tscn" id="4_5k4jt"]
[ext_resource type="PackedScene" uid="uid://dh8xchvhevxta" path="res://tree/tree.tscn" id="4_qy63d"]
[ext_resource type="Texture2D" uid="uid://bra8u22p20i4p" path="res://assets/log.png" id="8_6et1j"]
[ext_resource type="FontFile" uid="uid://ctargx2l5n4fl" path="res://assets/Salmon Typewriter 9 Bold.ttf" id="9_etqu2"]
[ext_resource type="Texture2D" uid="uid://dp4tvvrvxxnju" path="res://assets/sun.png" id="10_jw1n3"]
[ext_resource type="Texture2D" uid="uid://bla3du06nivh" path="res://assets/moon.png" id="11_xdh4e"]
[ext_resource type="PackedScene" uid="uid://hsmo2ix80mf4" path="res://menu/menu.tscn" id="12_c7dyn"]
[ext_resource type="AudioStream" uid="uid://bxo6t586d5wn2" path="res://assets/tree_fall.wav" id="13_1fput"]
[ext_resource type="AudioStream" uid="uid://d04gi4gqxg8sq" path="res://assets/dog_hurt.mp3" id="14_6yxbg"]

[sub_resource type="Curve" id="Curve_c7dyn"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.7, 0.2), 0.0, 0.0, 0, 0, Vector2(0.9966888, 0.7993288), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve2D" id="Curve2D_c7dyn"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1, -93, 0, 0, 0, 0, 1, 87, 0, 0, 0, 0, -319, 83)
}
point_count = 3

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_xdh4e"]
light_mode = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xdh4e"]
bg_color = Color(0.22352941, 0.1254902, 0.18039216, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c7dyn"]
bg_color = Color(0.5137255, 0.26666668, 0.24313726, 1)

[node name="main" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_qy63d")
night_light_curve = SubResource("Curve_c7dyn")

[node name="background" type="ColorRect" parent="."]
offset_right = 320.0
offset_bottom = 180.0
color = Color(0.85490197, 0.7607843, 0.50980395, 1)

[node name="Map" type="Node" parent="."]

[node name="Floor" type="TileMapLayer" parent="Map"]
tile_map_data = PackedByteArray("AAADAAIAAAACAAAAAAAFAAUAAAABAAAAAAAHAAQAAAAAAAAAAAAKAAIAAAADAAAAAAAGAAcAAAAFAAAAAAASAAcAAAACAAAAAAARAAUAAAAAAAAAAAASAAIAAAABAAAAAAASAAAAAAACAAAAAAATAAoAAAACAAAAAAAJAAoAAAABAAAAAAAJAAcAAAACAAAAAAA=")
tile_set = ExtResource("1_m1504")
y_sort_origin = 1

[node name="Fooliage" type="TileMapLayer" parent="Map"]
y_sort_enabled = true
tile_map_data = PackedByteArray("AAAQAAkAAAABAAAAAAAPAAYAAAAFAAAAAAAOAAkAAAADAAAAAAAEAAEAAAADAAAAAAAEAAgAAAABAAAAAAACAAMAAAABAAAAAAAHAAkAAAAAAAAAAAACAAYAAAAAAAAAAAANAAQAAAACAAAAAAAHAAYAAAABAAAAAAADAAkAAAAAAAAAAAANAAgAAAACAAAAAAALAAkAAAABAAAAAAALAAgAAAAEAAAAAAAMAAkAAAAFAAAAAAAOAAMAAAAAAAAAAAAQAAQAAAACAAAAAAAPAAQAAAAEAAAAAAAPAAEAAAABAAAAAAAGAAEAAAABAAAAAAAIAAEAAAAAAAAAAAABAAIAAAAEAAAAAAABAAkAAAADAAAAAAAJAAMAAAABAAAAAAALAAEAAAACAAAAAAANAAAAAAAAAAAAAAADAAAAAAAAAAAAAAABAAUAAAACAAAAAAABAAAAAAACAAAAAAADAAUAAAAEAAAAAAAKAAAAAAAEAAAAAAA=")
tile_set = ExtResource("1_m1504")

[node name="Wovles" type="Node" parent="."]

[node name="Wolf2" parent="Wovles" instance=ExtResource("3_5k4jt")]
position = Vector2(222, 146)

[node name="Wolf4" parent="Wovles" instance=ExtResource("3_5k4jt")]
position = Vector2(57, 143)

[node name="Wolf3" parent="Wovles" instance=ExtResource("3_5k4jt")]
position = Vector2(107, 62)

[node name="Wolf" parent="Wovles" instance=ExtResource("3_5k4jt")]
position = Vector2(232, 50)

[node name="Trees" type="Node" parent="."]

[node name="Tree" parent="Trees" instance=ExtResource("4_qy63d")]
z_index = 1
y_sort_enabled = true
position = Vector2(121, 34)

[node name="Tree4" parent="Trees" instance=ExtResource("4_qy63d")]
z_index = 1
y_sort_enabled = true
position = Vector2(199, 152)

[node name="Tree3" parent="Trees" instance=ExtResource("4_qy63d")]
z_index = 1
y_sort_enabled = true
position = Vector2(37, 162)

[node name="Tree5" parent="Trees" instance=ExtResource("4_qy63d")]
z_index = 1
y_sort_enabled = true
position = Vector2(98, 89)

[node name="Tree2" parent="Trees" instance=ExtResource("4_qy63d")]
z_index = 1
y_sort_enabled = true
position = Vector2(34, 50)

[node name="Tree6" parent="Trees" instance=ExtResource("4_qy63d")]
z_index = 1
y_sort_enabled = true
position = Vector2(252, 69)

[node name="Sheep" parent="." instance=ExtResource("4_5k4jt")]
position = Vector2(188, 86)

[node name="Player" parent="." instance=ExtResource("2_ifaiv")]
z_index = 1
y_sort_enabled = true
position = Vector2(150, 96)

[node name="AmbushTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Campfire" parent="." instance=ExtResource("1_ifaiv")]
position = Vector2(173, 94)

[node name="WolfSpawnPath" type="Path2D" parent="."]
position = Vector2(319, 93)
curve = SubResource("Curve2D_c7dyn")

[node name="WolfSpawnPathFollow" type="PathFollow2D" parent="WolfSpawnPath"]
unique_name_in_owner = true
position = Vector2(1, -93)
rotation = 1.5707964

[node name="NightTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
color = Color(0.85490197, 0.7607843, 0.50980395, 1)
energy = 0.0
max_distance = 640.0

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.09019608, 0.06666667, 0.101960786, 1)

[node name="HUD" type="Control" parent="."]
z_index = 20
material = SubResource("CanvasItemMaterial_xdh4e")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 320.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="HealthContainer" type="HBoxContainer" parent="HUD"]
unique_name_in_owner = true
use_parent_material = true
layout_mode = 1
offset_left = 2.0
offset_top = 2.0
offset_right = 2.0
offset_bottom = 10.0

[node name="LogTexture" type="TextureRect" parent="HUD"]
use_parent_material = true
layout_mode = 0
offset_left = 3.0
offset_top = 12.0
offset_right = 19.0
offset_bottom = 20.0
texture = ExtResource("8_6et1j")

[node name="LogLabel" type="Label" parent="HUD"]
unique_name_in_owner = true
use_parent_material = true
layout_mode = 0
offset_left = 21.0
offset_top = 11.0
offset_right = 41.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.9607843, 0.9372549, 0.9098039, 1)
theme_override_colors/font_outline_color = Color(0.09019608, 0.06666667, 0.101960786, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("9_etqu2")
theme_override_font_sizes/font_size = 9
text = "12"
vertical_alignment = 1

[node name="SunTexture" type="TextureRect" parent="HUD"]
use_parent_material = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -10.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = 10.0
grow_horizontal = 0
texture = ExtResource("10_jw1n3")

[node name="MoonRect" type="TextureRect" parent="HUD"]
use_parent_material = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -82.0
offset_top = 2.0
offset_right = -74.0
offset_bottom = 10.0
grow_horizontal = 0
texture = ExtResource("11_xdh4e")

[node name="TimeBar" type="ProgressBar" parent="HUD"]
unique_name_in_owner = true
use_parent_material = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -72.0
offset_top = 4.0
offset_right = -12.0
offset_bottom = 8.0
grow_horizontal = 0
theme_override_styles/background = SubResource("StyleBoxFlat_xdh4e")
theme_override_styles/fill = SubResource("StyleBoxFlat_c7dyn")
show_percentage = false

[node name="Menu" parent="HUD" instance=ExtResource("12_c7dyn")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="TreeCuttedSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_1fput")

[node name="WolfDieSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_6yxbg")

[node name="OvertimeAttackTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="died" from="Wovles/Wolf2" to="." method="_on_wolf_died"]
[connection signal="died" from="Wovles/Wolf4" to="." method="_on_wolf_died"]
[connection signal="died" from="Wovles/Wolf3" to="." method="_on_wolf_died"]
[connection signal="died" from="Wovles/Wolf" to="." method="_on_wolf_died"]
[connection signal="cutted" from="Trees/Tree" to="." method="_on_tree_cutted"]
[connection signal="cutted" from="Trees/Tree4" to="." method="_on_tree_cutted"]
[connection signal="cutted" from="Trees/Tree3" to="." method="_on_tree_cutted"]
[connection signal="cutted" from="Trees/Tree5" to="." method="_on_tree_cutted"]
[connection signal="cutted" from="Trees/Tree2" to="." method="_on_tree_cutted"]
[connection signal="cutted" from="Trees/Tree6" to="." method="_on_tree_cutted"]
[connection signal="health_changed" from="Player" to="." method="_on_player_health_changed"]
[connection signal="log_count_changed" from="Player" to="." method="_on_player_log_count_changed"]
[connection signal="timeout" from="AmbushTimer" to="." method="_on_ambush_timer_timeout"]
[connection signal="extinguished" from="Campfire" to="." method="_on_campfire_extinguished"]
[connection signal="lighted" from="Campfire" to="." method="_on_campfire_lighted"]
[connection signal="timeout" from="NightTimer" to="." method="_on_night_timer_timeout"]
[connection signal="timeout" from="OvertimeAttackTimer" to="." method="_on_overtime_attack_timer_timeout"]
